# Tiremo-Accelerator-Workshops-Aiot

./: Kurulum.md  README.md  SETUP_VSCODE.md
Activity1_Sensor_Connectivity_and_MQTT/: Kurulum.md  README.md
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/: CMakeLists.txt  CMakePresets.json  README.md  SETUP_VSCODE.md  flash.bat  openocd.cfg  prompt.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/: main.c  prv_user_code.c  user_adc.c  user_i2c.c  user_timer1_isr.c  user_uart.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/ESP32_AT_Test/: ESP32_AT_Test.c  ESP32_AT_Test.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/LISDE12TR/: LIS2DE12_app.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/MP23ABS1/: mp23abs1_sensor.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/MQTT_Library/: EMPA_MqttAws.c  EMPA_MqttAws.h  mqtt_core.c  mqtt_core.h  mqtt_port.h  mqtt_port_abov.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/SHT40/: SHT40_app.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Example/Source/TmplUserApp/Sensor/: sensor.c  sensor.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/ADC/: hal_adc_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/ADC/Vx/V1x/: hal_adc_v1x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/CRC/: hal_crc_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/FRT/: hal_frt_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/HPL/NMI/Vx/V2x/: hpl_nmi_v2x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/HPL/NMI/Vx/V4x/: hpl_nmi_v4x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/I2C/: hal_i2c_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/Include/: hal_cfmc.h  hal_qspi.h  hal_scu_lvd.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/PCU/: hal_pcu_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/QSPI/: hal_qspi.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/QSPI/Vx/V1x/: hal_qspi_v_01_00_00.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/SCU/: hal_scu_clk.c  hal_scu_lvd.c  hal_scu_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/SCU/Vx/V2x/: hal_scu_v2x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/SCU/Vx/V4x/: hal_scu_v4x.h  hal_scu_v_04_00_00.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/SPI/: hal_spi.c
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/SPI/Vx/V1x/: hal_spi_v1x.h  hal_spi_v_01_00_00.h  hal_spi_v_01_00_01.h  hal_spi_v_01_00_02.h  hal_spi_v_01_01_00.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/Timer1/: hal_timer1_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/UART/: hal_uart_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/UART/Vx/V1x/: hal_uart_v1x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/USART/: hal_usart_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/USART/Fx/F1x/: hal_usart_f1x.h  hal_usart_f_01_02_01.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/Platform/HAL/WDT/: hal_wdt_version.txt
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/ProductConfig/A34G43x/Config/: startup_a34g43x.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/AUDK32_A34xxxx-1.0.11/cmake/: arm-none-eabi.cmake
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/MQTT_Project/Core/Inc/: myESP32AT.h
Activity1_Sensor_Connectivity_and_MQTT/Project_MQTT/MQTT_Project/Core/Src/: EMPA_DataCollector.c  EMPA_MqttAws.c  EMPA_Sensor.c  myESP32AT.c
Activity2_EdgeAI_Solutions_and_Deployment/: EdgeAI_Entegrasyon.md  README.md  requirements.txt
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_DataCollector/: README.md
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_DataCollector/Core/Src/: main.c
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/: .cproject  README.md
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Core/Src/: main.c
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/: WORKSHOP_DataCollector.elf  WORKSHOP_DataCollector.map  makefile  objects.list  sources.mk
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/Core/Src/: main.cyclo  main.d  main.su  subdir.mk
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/Core/Startup/: subdir.mk
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/Drivers/BSP/Components/ism330is/: ism330is_reg.cyclo  ism330is_reg.su  subdir.mk
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/Drivers/STM32U5xx_HAL_Driver/Src/: subdir.mk
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/Debug/tiremo_api/: subdir.mk  tiremo_api.cyclo  tiremo_api.d  tiremo_api.su
Activity2_EdgeAI_Solutions_and_Deployment/Projects/Project_EdgeAI/tiremo_api/: model.h  tiremo_api.c  tiremo_api.h  tiremo_classes.h  tiremo_config.h
